# base.django

./: .dockerignore  .env.example  .flake8  .gitignore  .pylintrc  Dockerfile  Pipfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.cfg
.circleci/: config.yml
.github/workflows/: deploy.yml  django.yml  django_testing.yml
api/: urls.py  views.py
api/tests/: test_api.py
api/views/: __init__.py  authentication.py  views.py
backend/: admin.py  tests.py  urls.py  views.py
backend/fixtures/: db.json
backend/management/commands/: create_superuser.py
backend/migrations/: 0001_change_to_custom_user.py  0002_auto_20210709_0340.py  0003_category.py  0004_article_category.py
backend/models/: article.py  category.py
backend/templates/: articles.html  user_listing.html
backend/templates/admin/: forgot_password.html  login.html  login_base.html  reset_password.html
backend/templates/templated_email/: reset_password_admin.html
backend/tests/: test_admin.py  test_admin_template.py  test_main_page_template.py  test_models.py  test_selenium.py  test_templates.py
backend/views/: __init__.py  article.py  user_listing.py
base/: celery.py  context_processors.py  look_up.py  schema.py  settings.py  urls.py
base/settings/: __init__.py  circleci.py  defaults.py  dev.py  heroku.py  production.py  staging.py
base/tests/: test_celery.py  test_graphene.py
db/: Dockerfile  crontab
db/scripts/: pg_backup.config  pg_backup_rotated.sh
utils/: django_utils.py
